--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ header img {
 }
 
 
-/* WHAT WE OFFER SECTION */
+/* === WHAT WE OFFER SECTION === */
 .we-offer {
   display: flex;
   justify-content: center;
@@ -138,25 +138,23 @@ header img {
 }
 
 .hand, .camera {
+  flex: 1 1 20%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  margin: 50px;
   background-color: rgba(255, 255, 255, 0.774);
-  max-width: 550px;
-  flex: 1;
-  padding: 40px 0px;
-  height: 500px;
-  gap: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  padding: 2.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  height: 20%;
 }
 
 .hand img, .camera img {
-  width: 90%;
-  height: auto;
-  border-radius: 10px;
+  width: 95%;
+  height: 30rem; /* ~240px but scalable */
+  object-fit: cover;
+  border-radius: 1rem;
 }
 
 .hand h2, .camera h2 {
@@ -171,7 +169,7 @@ header img {
 }
 
 
-/* FILTERS SECTION */
+/* === FILTERS SECTION === */
 .filters {
   max-width: 100%;
   display: flex;
@@ -217,7 +215,7 @@ header img {
 }
 
 
-/* QUOTE SECTION */
+/* === QUOTE SECTION === */
 .recommend {
   display: flex;
   flex-direction: row;
@@ -239,7 +237,7 @@ header img {
 }
 
 
-/* FOOTER */
+/* === FOOTER === */
 .copyright {
   background-color: black;
   color: white;
@@ -247,6 +245,14 @@ header img {
   justify-content: space-between;
   padding: 15px;
 }
+
+/* === OUTSIDE MOBILE CSS HIDDEN === */
+.mobile-nav {
+  display: none;
+}
+
+
+
 
 
 /* ===MOBILE MEDIA QUERY === */
@@ -260,13 +266,32 @@ header img {
     padding-inline: 0;
   }
 
-
   /* === HEADER SECTION === */
-  .
+  .desktop-nav {
+    display: none;
+  }
 
+  .mobile-nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: black;
+    padding: 10px;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+  }
 
-
- 
+  .mobile-nav button {
+    padding: 10px 40px;
+    background-color: #9DC20A;
+    color: white;
+    font-size: 1.25rem;
+    border-radius: 10px;
+  }
 
   .sign-up {
     padding: 0;
