--- a/style.css
+++ b/style.css
@@ -192,36 +192,41 @@ header img {
   background-color: #9DC20A;
   width: 100%;
   text-align: center;
-  height: 200px;
+  max-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 50px;
+  padding: 2rem 1rem;
+  gap: 1.5rem;
 }
 
 .filter-text h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
+  line-height: 1.2;
   color: white;
 }
 
 .filter-text p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.5;
   color: white;
 }
 
 .showcase {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
   width: 100%;
-  gap: 10px;
-  padding: 30px;
+  gap: 1.5rem;
+  padding: 2rem 4rem;
   justify-items: center;
   background-color: black;
 }
 
 .showcase img {
   width: 100%;
+  height: auto;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 
@@ -229,10 +234,11 @@ header img {
 .recommend {
   display: flex;
   flex-direction: row;
-  max-width: 100%;
   justify-content: space-around;
   align-items: center;
-  height: 150px;
+  gap: 2rem;
+  padding: 2rem;
+  flex-wrap: wrap;
 }
 
 .recommend h2 {
@@ -254,6 +260,10 @@ header img {
   display: flex;
   justify-content: space-between;
   padding: 15px;
+}
+
+.copyright p {
+  font-size: 0.8rem;
 }
 
 /* === OUTSIDE MOBILE CSS HIDDEN === */
@@ -285,7 +295,7 @@ header img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.938);
     padding: 10px;
     height: 50px;
     position: fixed;
